css/style.scss
/* ... */
.info_section {
    margin: 1% 0;
}

main > p {
    text-align: center;
}

main > section > section > header > h3 {
    padding-bottom: 20px;
    font-weight: bold;
    font-size: 1.3em;
}

main > section > section > header > h3 > a {
    color: $mainText;
    text-decoration: none;
}

main > section > section > section {
    padding-bottom: 3%;
}

main > section > section > footer, main > section > footer {
    margin: 0 5%;
    width: 90%;
    text-align: right;
}

main > section:first-of-type {
    margin-top: -5.5em;
}

main > section {
    position: relative;
    z-index: 1;
}

main > footer {
    margin: 0 5% 50px 5%;
    width: 90%;
    text-align: center;
}

main > footer > a:last-of-type {
    margin-left: 70%;
}

main > section.alert {
    position: fixed;
    float: left;
    margin-top: 1.5%;
    margin-left: 5%;
    margin-bottom: 1.25em;
    padding: 1em;
    width: 90%;
    background-color: $mainBackground;
    border: 0.15em solid $mainRed;
    border-radius: 0.5em;
    box-sizing: border-box;
    color: $mainText;
    box-shadow: 0 0 0;
    z-index: 4;
}

main > section.alert > p {
    width: 90%;
    font-size: 1.25em;
    display: inline-block;
    vertical-align: middle;
}

main > section.alert > a {
    display: inline-block;
    text-align: center;
    width: 10%;
}

main > section.alert > a > img {
    height: 1.5em;
    vertical-align: middle;
}


#discover_link {
    @include button(40%, 1em);
    margin: 0 30% 2em 30%;
}

/* registration and login, other forms */
#register_login > header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    margin: 1% 1% 3% 1%;
}

#register_login > header > button {
    font-family: $titlesFont;
    border: none;
    color: $mainRed;
    opacity: 0.5;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    background-color: transparent;
    font-size: 1.3em;
}

#register_login > header > button:not(.selected):hover {
    text-decoration: underline;
    cursor: pointer;
}

#register_login > header > button.selected {
    font-size: 2em;
    opacity: 1;
}

form > header > h2 {
    font-family: $titlesFont;
    color: $mainRed;
}

form, form > fieldset {
    width: 100%;
    text-align: center;
}

form > fieldset {
    border: 0;
    margin-bottom: 0.5em;
    padding-top: 1em;
}

form > fieldset:not(:first-of-type) {
    border-top: 1px solid $mainText;
}

form section > *:last-child {
    margin-bottom: 30px;
}

#register_login p {
    text-align: center;
    font-size: 0.8em;
    margin: 3% 0 0 0;
}

#register_login p a {
    font-weight: bold;
    color: $mainText;
}

form label {
    display: inline-block;
    text-align: left;
    min-width: 30%;
    width: 100%;
    white-space: normal;
    word-wrap: break-word;
}

form label > span {
    font-size: 0.7em;
}

form input {
    display: inline-block;
    margin: 2% 0;
    height: 2em;
    box-sizing: border-box;
}

form > input:not(:last-of-type), form > fieldset > input, form section > input, form textarea {
    width: 100%;
    margin-bottom: 1em;
    box-sizing: border-box;
}

form p, form h2 {
    color: $mainText;
    margin-bottom: 1em;
}

form > input:last-of-type, form button {
    height: 1.5em;
}

form input[type=submit], form button {
    @include button(30%, 1.3);
}

#registration_form :required:invalid {
    border: 0.5px solid $mainRed;
}

form input[type=radio], form input[type=checkbox] {
    width: 15%;
    height: 1.5em;
}

#registration_form > fieldset:first-of-type > label {
    width: 80%;
}

/* search form */
#search_section {
    padding-top: 2%;
}

#search_section > form > fieldset {
    width: 100%;
    background-color: $sectionBackground;
    display: inline-block;
    vertical-align: middle;
    text-align: left;
}

#search_section > form > fieldset > label:first-of-type {
    max-width: 10%;
    min-width: 10%;
    float: left;
    clear: left;
    margin-top: 0.65em;
    padding-left: 3%;
    box-sizing: border-box;
}

#search_section > form > fieldset > label > img {
    height: 1.20em;
    padding: 0.1em;
}

#search_section > form > fieldset > label:not(:first-of-type) {
    max-width: 30%;
    min-width: 30%;
}

#search_section > form > fieldset > input {
    box-sizing: border-box;
}

#search_section > form > fieldset > input[type=text] {
    background: transparent;
    margin-left: -10%;
    height: 2.1em;
    border-radius: 2.1em;
    box-shadow: $boxShadows;
    border: 0.1em solid $formText; 
    padding-left: 10%;
    padding-right: 2%;
}

#general_search > input[type=text] {
    width: 80%;
    margin-bottom: 0;
    box-sizing: border-box;
    height: 100%;
}

#specific_search > input[type=text] {
    width: 100%;
}

#search_section > form > fieldset > input:not(:last-child):not([type=text]), #search_section > form > fieldset > select {
    max-width: 70%;
    min-width: 70%;
    margin: 2% 0;
}

#search_section > form > fieldset > input[type=date], #search_section > form > fieldset > select {
    border: 0.1em solid $formText;
    border-radius: 2em;
    height: 2em;
    padding: 0 0.3em;
}

#search_section > form > fieldset:not(:first-of-type) {
    border-top: 0;
    padding: 0;
    margin: 0;
}

#filters_button {
    border-radius: 1.5em;
    border: thin solid $formText;
    height: 1.7em;
    background: $sectionBackground;
    box-shadow: 1px 1px 1px rgba($boxShadows, 0.7);
    width: 18%;
    min-width: 18%;
    margin-left: 2%;
    color: $formText;
    cursor: pointer;
    box-sizing: border-box;
    font-size: 1em;
}

/* purchase section */
#purchase_section > table {
    text-align: center;
    width: 100%;
    display: block;
    margin-top: 1em;
}

#purchase_section > table > tr > * {
    width: 33%;
}

#purchase_section > table > tr:nth-child(odd) > th:nth-child(n+4) {
    display: none;
}

#purchase_section > table > tr > * {
    display: inline-block;
}
/* ... */

